--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,8 @@
 Package: MIMOSA2
 Title: MIMOSA with baseline
-Version: 0.1.0
-Authors@R: person("Greg", "Finak", email = "gfinak@fhcrc.org", role = c("aut", "cre"))
+Version: 0.99.0
+Author: Greg Finak
+Maintainer: Greg Finak <gfinak@fredhutch.org> 
 Description: Fits a MIMOSA model to data with baseline.
 Depends:
     R (>= 3.2.0)
