--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,9 @@ export(ORTest)
 export(ROC)
 export(ROCPlot)
 export(bbll)
+export(getFDR)
+export(getResponse)
+export(getZ)
 export(invlogit)
 export(logit)
 export(simulate_MIMOSA2)
